@@ -3,6 +3,8 @@ cdebconf (0.76) UNRELEASED; urgency=low
   NOTE: Not for sarge.
   * Colin Watson
     - Add draft plugins specification.
+    - Append '\n' to debug messages automatically when printing to stderr,
+      so that they aren't needed in every string.
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 19 Apr 2005 14:45:09 +1000
 
